--- a/netlify.toml
+++ b/netlify.toml
@@ -2,12 +2,12 @@
   NODE_ENV = "production"
   NODE_VERSION = "12"
 
-[[headers]]
-  for = "*.jpg"
-  [headers.values]
-    Cache-Control = "public, max-age=31536000"
+# [[headers]]
+#   for = "*.jpg"
+#   [headers.values]
+#     Cache-Control = "public, max-age=31536000"
 
-[[headers]]
-  for = "*.png"
-  [headers.values]
-    Cache-Control = "public, max-age=31536000"
+# [[headers]]
+#   for = "*.png"
+#   [headers.values]
+#     Cache-Control = "public, max-age=31536000"
