--- a/package.json
+++ b/package.json
@@ -35,12 +35,12 @@
     "gulp-newer": "^1.4.0",
     "gulp-postcss": "^9.0.1",
     "gulp-vinyl-flow": "^1.1.0",
-    "highlight.js": "^10.2.0",
+    "highlight.js": "^11.3.1",
+    "image-size": "^1.0.0",
     "markdown-it": "^12.0.4",
-    "markdown-it-attrs": "^4.0.0",
+    "markdown-it-attrs": "^4.1.3",
     "markdown-it-emoji": "^2.0.0",
-    "markdown-it-imsize": "^2.0.1",
-    "markdown-it-link-attributes": "^3.0.0",
+    "markdown-it-link-attributes": "^4.0.0",
     "postcss": "^8.4.5",
     "postcss-import": "^14.0.2"
   },
