--- a/package.json
+++ b/package.json
@@ -24,20 +24,20 @@
     "debug": "cross-env DEBUG=Eleventy* eleventy --dryrun"
   },
   "dependencies": {
-    "@11ty/eleventy": ">=1.0.0-canary.49 || ^1.0.0",
-    "@tigersway/gulp-responsive": "^1.3.0",
+    "@11ty/eleventy": "^1.0.0",
+    "@tigersway/gulp-responsive": "^1.5.0",
     "dayjs": "^1.10.7",
     "del": "^6.0.0",
-    "fast-glob": "^3.2.4",
+    "fast-glob": "^3.2.9",
     "gulp": "^4.0.2",
     "gulp-clean-css": "^4.3.0",
-    "gulp-load-plugins": "^2.0.4",
+    "gulp-load-plugins": "^2.0.7",
     "gulp-newer": "^1.4.0",
     "gulp-postcss": "^9.0.1",
     "gulp-vinyl-flow": "^1.1.0",
-    "highlight.js": "^11.3.1",
+    "highlight.js": "^11.4.0",
     "image-size": "^1.0.0",
-    "markdown-it": "^12.0.4",
+    "markdown-it": "^12.3.2",
     "markdown-it-attrs": "^4.1.3",
     "markdown-it-emoji": "^2.0.0",
     "markdown-it-link-attributes": "^4.0.0",
@@ -45,7 +45,7 @@
     "postcss-import": "^14.0.2"
   },
   "devDependencies": {
-    "browser-sync": "^2.26.12",
+    "browser-sync": "^2.27.7",
     "dotenv": "^10.0.0"
   }
 }
