--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,8 @@
     "MD033": false, // Inline HTML
   },
   "cSpell.words": [
+    "abril",
+    "csso",
     "dayjs",
     "ECBS",
     "noopener",
