--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
   "name": "eleventy-classic-blog-starter",
-  "description": "A starter repository for a classic blog website using the Eleventy SSG",
+  "description": "A starter repository for a \"classic-themed\" blog website using Eleventy",
   "keywords": [
     "eleventy",
     "11ty",
     "starter",
-    "gulp",
     "syntax-highlighting",
     "highlight-js",
     "hyde-theme"
   ],
-  "version": "1.0.0-alpha",
+  "version": "2.0.0",
   "license": "MIT",
   "author": "Ben Michaud <ben@tigersway.net>",
   "repository": {
@@ -19,33 +18,38 @@
   },
   "homepage": "https://github.com/TigersWay/eleventy-classic-blog-starter/#readme",
   "scripts": {
-    "live": "NODE_ENV=development gulp live",
-    "build": "NODE_ENV=production gulp build",
-    "debug": "cross-env DEBUG=Eleventy* eleventy --dryrun"
+    "start": "NODE_ENV=development concurrently -c auto npm:dev:* --kill-others",
+    "prestart": "rm -rf ./public",
+    "dev:11ty": "eleventy --serve --incremental --quiet",
+    "dev:css": "postcss site/_themes/$npm_package_config_theme/css/styles.css -o public/css/styles.min.css -w",
+    "build": "NODE_ENV=production concurrently -c auto npm:build:* --kill-others-on-fail",
+    "prebuild": "rm -rf ./build",
+    "build:11ty": "eleventy --output build --quiet --pathprefix $PATHPREFIX",
+    "build:css": "postcss site/_themes/$npm_package_config_theme/css/styles.css -o build/css/styles.min.css -m",
+    "prod-preview": "npx http-server build -o --gzip --brotli"
   },
-  "dependencies": {
-    "@11ty/eleventy": "^1.0.0",
-    "@tigersway/gulp-responsive": "^1.5.0",
-    "dayjs": "^1.10.7",
-    "del": "^6.0.0",
-    "fast-glob": "^3.2.9",
-    "gulp": "^4.0.2",
-    "gulp-clean-css": "^4.3.0",
-    "gulp-load-plugins": "^2.0.7",
-    "gulp-newer": "^1.4.0",
-    "gulp-postcss": "^9.0.1",
-    "gulp-vinyl-flow": "^1.1.0",
-    "highlight.js": "^11.4.0",
-    "image-size": "^1.0.0",
-    "markdown-it": "^12.3.2",
-    "markdown-it-attrs": "^4.1.3",
-    "markdown-it-emoji": "^2.0.0",
-    "markdown-it-link-attributes": "^4.0.0",
-    "postcss": "^8.4.5",
-    "postcss-import": "^14.0.2"
+  "config": {
+    "theme": "hyde"
   },
   "devDependencies": {
-    "browser-sync": "^2.27.7",
-    "dotenv": "^10.0.0"
+    "@11ty/eleventy": "2.0.0-canary.20",
+    "concurrently": "^7.6.0",
+    "dayjs": "^1.11.7",
+    "dotenv": "^16.0.3",
+    "fast-glob": "^3.2.12",
+    "highlight.js": "^11.7.0",
+    "markdown-it": "^13.0.1",
+    "markdown-it-attrs": "^4.1.6",
+    "markdown-it-eleventy-img": "^0.9.0",
+    "markdown-it-emoji": "^2.0.2",
+    "markdown-it-link-attributes": "^4.0.1",
+    "postcss": "^8.4.20",
+    "postcss-cli": "^10.1.0",
+    "postcss-csso": "^6.0.1",
+    "postcss-import": "^15.1.0"
+  },
+  "dependencies": {
+    "@fontsource/abril-fatface": "^4.5.9",
+    "@fontsource/pt-sans": "^4.5.11"
   }
 }
