--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,8 @@
-site/_themes/hyde/css/hyde.css linguist-detectable=false
-site/_themes/hyde/css/poole.css linguist-detectable=false
-*.md linguist-detectable=true
-*.md linguist-documentation=false
+# Eleventy & markdown templates
+*.md linguist-detectable
+*.md -linguist-documentation
+README.md linguist-documentation
+
+# Hyde | Original files
+site/_themes/hyde/css/hyde.css -linguist-detectable
+site/_themes/hyde/css/poole.css -linguist-detectable
