--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
   "markdownlint.config": {
     "MD026": false, // Trailing punctuation in heading
     "MD033": false, // Inline HTML
+    "MD036": false, // Emphasis used instead of a heading
   },
   "cSpell.words": [
     "abril",
