--- a/package.json
+++ b/package.json
@@ -22,22 +22,23 @@
     "prestart": "rm -rf ./public",
     "dev:11ty": "eleventy --serve --incremental --quiet",
     "dev:css": "postcss site/_themes/$npm_package_config_theme/css/styles.css -o public/css/styles.min.css -w",
-    "build": "NODE_ENV=production concurrently -c auto npm:build:* --kill-others-on-fail",
+    "build": "npm run build:css && npm run build:11ty",
     "prebuild": "rm -rf ./build",
-    "build:11ty": "eleventy --output build --quiet --pathprefix $PATHPREFIX",
-    "build:css": "postcss site/_themes/$npm_package_config_theme/css/styles.css -o build/css/styles.min.css -m",
+    "build:11ty": "NODE_ENV=production eleventy --output build --quiet --pathprefix $PATHPREFIX",
+    "build:css": "NODE_ENV=production postcss site/_themes/$npm_package_config_theme/css/styles.css -o site/_themes/$npm_package_config_theme/css/styles.min.css -m",
     "prod-preview": "npx http-server build -o --gzip --brotli"
   },
   "config": {
     "theme": "hyde"
   },
   "devDependencies": {
-    "@11ty/eleventy": "2.0.0-canary.20",
+    "@11ty/eleventy": "2.0.0-canary.23",
     "concurrently": "^7.6.0",
     "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
     "fast-glob": "^3.2.12",
     "highlight.js": "^11.7.0",
+    "html-minifier": "^4.0.0",
     "markdown-it": "^13.0.1",
     "markdown-it-attrs": "^4.1.6",
     "markdown-it-eleventy-img": "^0.9.0",
@@ -46,7 +47,8 @@
     "postcss": "^8.4.20",
     "postcss-cli": "^10.1.0",
     "postcss-csso": "^6.0.1",
-    "postcss-import": "^15.1.0"
+    "postcss-import": "^15.1.0",
+    "postcss-url": "^10.1.3"
   },
   "dependencies": {
     "@fontsource/abril-fatface": "^4.5.9",
