--- a/.editorconfig
+++ b/.editorconfig
@@ -9,4 +9,5 @@ trim_trailing_whitespace = true
 insert_final_newline = true
 
 [*.{njk,md}]
+trim_trailing_whitespace = false
 insert_final_newline = false
